--- a/generate-index.html
+++ b/generate-index.html
@@ -32,12 +32,26 @@
             </div>
             <div class="card-body">
                 <ul class="list-group">
-                    <li class="list-group-item">ID: a</li>
+                    <li class="list-group-item">ID: 1</li>
                     <li class="list-group-item">Email: <a href="mailto:a">a</a></li>
-                    <li class="list-group-item">Office number: a</li>
+                    <li class="list-group-item">Office number: 00</li>
                 </ul>
             </div>
         </div>
+            
+            <div class="card employee-card">
+        <div class="card-header">
+            <h2 class="card-title">s</h2>
+            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        </div>
+        <div class="card-body">
+            <ul class="list-group">
+                <li class="list-group-item">ID: 2</li>
+                <li class="list-group-item">Email: <a href="mailto:s">s</a></li>
+                <li class="list-group-item">GitHub: <a href="https://github.com/s" target="_blank" rel="noopener noreferrer">s</a></li>
+            </ul>
+        </div>
+    </div>
             
             <div class="card employee-card">
         <div class="card-header">
@@ -46,7 +60,7 @@
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: z</li>
+                <li class="list-group-item">ID: 3</li>
                 <li class="list-group-item">Email: <a href="mailto:z">z</a></li>
                 <li class="list-group-item">GitHub: <a href="https://github.com/z" target="_blank" rel="noopener noreferrer">z</a></li>
             </ul>
